# haskell-hangman

./: README.md  hangman.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: Dictionary.hs  Game.hs  Main.hs  Puzzle.hs
